# molecular-dynamics-toy

./: .gitignore  MDToy.spec  README.md  ThirdPartyNotices.html  pyproject.toml
.github/workflows/: executable.yaml  publish-to-pypi.yaml  pytest.yaml
src/molecular_dynamics_toy/: __main__.py  app.py  calculators.py  colors.py  engine.py
src/molecular_dynamics_toy/data/: atom_properties.py  colors.py  presets.py
src/molecular_dynamics_toy/widgets/: base.py  controls.py  energy_graph.py  menus.py  picker.py  simulation.py
test/: test_app.py  test_base.py  test_controls.py  test_energy_graph.py  test_engine.py  test_menu.py  test_picker.py  test_presets.py  test_simulation.py
